src/Tests/Error/NotFalseError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class NotFalseError extends AssertError
{
}
